Updated the README to address a problem I ran into during compilation when testing our packaged version